feat: apply prior pr comment and lotto second